[workspace]
resolver = "3"

members = [
    "programs/solana-account-model",
    "programs/solana-instructions"
, "programs/solana-program-derived-addresses", "programs/solana-transaction-fees",   "programs/solana-transactions"]
[workspace.dependencies]
anyhow = "1.0.100"
tokio = "1.48.0"
solana-client = "3.0.7"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
bincode = "1.3.3"
solana-system-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"
solana-compute-budget-interface = "3.0.0"
