[package]
name = "solana-account-model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
bincode = "1.3.3"
solana-system-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"
