[package]
name = "solana-account-model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
bincode.workspace = true
solana-system-interface.workspace = true
spl-token-2022-interface.workspace = true
